<resources>
    <!-- About app -->
    <string name="projectName">SofaScore Android Academy</string>
    <string name="classYear">Class 2021</string>
    <string name="appNameHint">App Name</string>
    <string name="appName">Super Cool Weather App</string>
    <string name="apiCredit">API Credit</string>
    <string name="apiAuthor" translatable="false">metaweather</string>
    <string name="developer">Developer</string>
    <string name="developerName" translatable="false">Ivan Putak</string>

    <string name="show">Show</string>
    <string name="hide">Hide</string>
    <string name="hello_world">Hello, World!</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- <string name=" "> </string> -->
    <!-- Search -->
    <string name="search">Search</string>
    <string name="searchCities">Search Cities</string>
    <string name="recent">Recent</string>
    <!-- My Cities -->
    <string name="myCities">My Cities</string>
    <!-- City Item -->
    <string name="minMax" translatable="false">Min / Max</string>
    <string name="wind">Wind</string>
    <string name="humidity">Humidity</string>
    <string name="pressure">Pressure</string>
    <string name="visibility">Visibility</string>
    <string name="accuracy">Accuracy</string>
    <string name="today">Today</string>
    <string name="nextSevenDays">Next 7 days</string>
    <string name="viewMore">View More</string>
    <!-- Settings -->
    <string name="settings">Settings</string>
    <string name="theme">Theme</string>
    <string name="chooseLanguage">Choose Language</string>
    <string name="language">Language</string>
    <string name="croatian">Croatian</string>
    <string name="english">English</string>
    <string name="selected_language">English</string>
    <string name="city">City</string>
    <string name="chooseUnit">Choose type of unit</string>
    <string name="metric">Metric</string>
    <string name="imperial">Imperial</string>
    <string name="about">About</string>
    <string name="loremIpsum" translatable="false">Vestibulum rutrum quam vitae fringilla tincidunt. Suspendisse nec tortor urna. Ut laoreet sodales nisi, quis iaculis nulla iaculis.</string>
    <string name="moreInfo">More info</string>

    <string name="clearCities">Clear my cities list</string>
    <string name="clearCitiesPopoverHeadline">Clear my cities list?</string>
    <string name="clearCitiesPopoverText">If you clear your cities list, your cities list will be empty.</string>
    <string name="clearCitiesSnackbarText">My cities list is clear.</string>

    <string name="clearSearch">Clear recent search list</string>
    <string name="clearSearchPopoverHeadline">Clear recent search list?</string>
    <string name="clearSearchPopoverText">If you clear your recent search list, your home screen will be empty.</string>
    <string name="clearSearchSnackbarText">Recent search list is clear.</string>


    <string name="cancel">Cancel</string>
    <string name="clear">Clear</string>


    <string name="add">Add</string>
    <string name="contacts">Contacts</string>
    <string name="createNewPerson">Create a new person</string>
    <string name="image">Image</string>
    <string name="imgUrlHint">https://www.sofascore.com/static/images/apple-icon-180x180.png</string>
    <string name="firstName">First name</string>
    <string name="firstNameError">First name can not be longer than 20 characters</string>
    <string name="lastName">Last name</string>
    <string name="lastNameError">Last name can not be longer than 20 characters</string>
    <string name="age">Age</string>
    <string name="ageError">Age can not larger than 150</string>
    <string name="oib" translatable="false">OIB</string>
    <string name="oibError">OIB has to have 11 digits</string>
    <string name="oibHint" translatable="false">12345678911</string>
    <string name="number">Number</string>
    <string name="numberHint" translatable="false">0987654321</string>
    <string name="twenty" translatable="false">20</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>


    <string name="select">Please Select an Option</string>


    <string name="snackbarPost">Contact added!</string>
    <string name="toastPost">Fields are reseted</string>
    <string name="ok" translatable="false">OK</string>


    <!-- ARRAYS -->
    <!-- Languages -->
    <string-array name="languages_array">
        <item>English</item>
        <item>Croatian</item>
    </string-array>
    <string-array name="cities_array">
        <item>Zagreb</item>
        <item>London</item>
    </string-array>
    <string name="project_name">SofaScore Android Academy</string>
    <string name="app_name">Super Cool Weather App</string>


</resources>