<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:layout_constraintCircleRadius="12dp"
    android:background="@drawable/popover_shape"
    android:orientation="vertical">

    <TextView
        android:id="@+id/popoverTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:fontFamily="@font/roboto_bold"
        android:lineHeight="24sp"
        android:text="@string/clearSearchPopoverHeadline"
        android:textColor="@color/dark"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/popoverText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/roboto_regular"
        android:lineHeight="20sp"
        android:text="@string/clearSearchPopoverText"
        android:textColor="@color/dark"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            tools:ignore="UselessLeaf" />

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:height="20sp"
            android:background="@color/surface_1"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/cancel"
            android:textAlignment="center"
            android:textColor="@color/tint_secondary"
            android:textSize="14sp" />

        <Button
            android:id="@+id/btn_clear"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:height="20sp"
            android:background="@drawable/btn_solid_4dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/clear"
            android:textAlignment="center"
            android:textColor="@color/surface_1"
            android:textSize="14sp" />
    </LinearLayout>
</LinearLayout>