<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/surface_1"
    tools:context=".AboutActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/surface_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/arrow_back"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="16dp" />
    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/tv_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="16dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/about"
        android:textColor="@color/dark"
        android:textSize="32sp"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <TextView
        android:id="@+id/tv_headline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="48dp"
        android:layout_marginRight="16dp"
        android:fontFamily="@font/roboto_bold"
        android:lineHeight="24sp"
        android:text="@string/projectName"
        android:textColor="@color/dark"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/tv_about" />

    <TextView
        android:id="@+id/tv_class_year"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginRight="16dp"
        android:fontFamily="@font/roboto_regular"
        android:lineHeight="20sp"
        android:text="@string/classYear"
        android:textColor="@color/dark"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/tv_headline" />

    <LinearLayout
        android:id="@+id/aboutBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/settings2_card_view"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/tv_class_year"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:baselineAligned="false"
        >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="23dp"
                android:paddingBottom="23dp"
                android:src="@drawable/logo_sofascore_lettering"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:src="@drawable/logo_android"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/appInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/aboutBox"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:text="@string/appNameHint"
            android:fontFamily="@font/roboto_medium"
            android:textSize="12sp"
            android:lineHeight="16sp"
            android:textColor="@color/cold_gray"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginBottom="12dp"
            android:text="@string/appName"
            android:fontFamily="@font/roboto_regular"
            android:textSize="16sp"
            android:lineHeight="20sp"
            android:textColor="@color/dark"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/apiInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/appInfo"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:text="@string/apiCredit"
            android:fontFamily="@font/roboto_medium"
            android:textSize="12sp"
            android:lineHeight="16sp"
            android:textColor="@color/cold_gray"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginBottom="12dp"
            android:text="@string/apiAuthor"
            android:fontFamily="@font/roboto_regular"
            android:textSize="16sp"
            android:lineHeight="20sp"
            android:textColor="@color/dark"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/developerInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/apiInfo"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:text="@string/developer"
            android:fontFamily="@font/roboto_medium"
            android:textSize="12sp"
            android:lineHeight="16sp"
            android:textColor="@color/cold_gray"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginBottom="12dp"
            android:text="@string/developerName"
            android:fontFamily="@font/roboto_regular"
            android:textSize="16sp"
            android:lineHeight="20sp"
            android:textColor="@color/dark"
            />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>

