<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".fragments.SettingsFragment">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/tint_primary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/settings"
                android:textColor="@color/surface_1"
                android:textSize="20sp" />
        </androidx.appcompat.widget.Toolbar>

        <LinearLayout
            android:id="@+id/languageBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@drawable/spinner_card_view"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/toolbar">

            <TextView
                android:id="@+id/tv_language"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/roboto_medium"
                android:lineHeight="16sp"
                android:text="@string/language"
                android:textColor="@color/tint_secondary"
                android:textSize="12sp" />

            <Spinner
                android:id="@+id/sp_language"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/roboto_regular"
                android:lineHeight="20sp"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/cityBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@drawable/spinner_card_view"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/languageBox">

            <TextView
                android:id="@+id/tv_city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/roboto_medium"
                android:lineHeight="16sp"
                android:text="@string/city"
                android:textColor="@color/tint_secondary"
                android:textSize="12sp" />

            <Spinner
                android:id="@+id/sp_city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/roboto_regular"
                android:lineHeight="20sp"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/unitBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/settings2_card_view"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/cityBox">

            <TextView
                android:id="@+id/tv_unit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/roboto_medium"
                android:lineHeight="16sp"
                android:text="@string/chooseUnit"
                android:textColor="@color/cold_gray"
                android:textSize="12sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioGroup
                    android:id="@+id/unitChoice"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1">

                        <RadioButton
                            android:id="@+id/metric"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:button="@drawable/custom_radio_button"
                            android:buttonTint="@color/tint_secondary" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:fontFamily="@font/roboto_regular"
                            android:lineHeight="20sp"
                            android:text="@string/metric"
                            android:textColor="@color/dark"
                            android:textSize="14sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1">

                        <RadioButton
                            android:id="@+id/imperial"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:button="@drawable/custom_radio_button"
                            android:buttonTint="@color/tint_secondary" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:fontFamily="@font/roboto_regular"
                            android:lineHeight="20sp"
                            android:text="@string/imperial"
                            android:textColor="@color/dark"
                            android:textSize="14sp" />
                    </LinearLayout>
                </RadioGroup>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/aboutBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/settings2_card_view"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/unitBox">

            <TextView
                android:id="@+id/tv_about"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/roboto_bold"
                android:lineHeight="24sp"
                android:text="@string/about"
                android:textColor="@color/dark"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/roboto_regular"
                android:lineHeight="20sp"
                android:text="@string/loremIpsum"
                android:textColor="@color/dark"
                android:textSize="14sp" />

            <Button
                android:id="@+id/btn_more_info"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"

                android:elevation="0dp"
                android:fontFamily="@font/roboto_medium"
                android:lineHeight="20sp"
                android:text="@string/moreInfo"
                android:textColor="@color/tint_secondary"
                android:textSize="14sp" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_clear_cities"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:height="20sp"
            android:background="@drawable/btn_destructive"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/clearCities"
            android:textColor="@color/error"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@id/aboutBox" />

        <Button
            android:id="@+id/btn_clear_search_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:height="20sp"
            android:background="@drawable/btn_destructive"
            style="?android:attr/borderlessButtonStyle"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/clearSearch"
            android:textColor="@color/error"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@id/btn_clear_cities" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
